# observatorio-corrupcion

./: .env.sample  .gitignore  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  nginx.conf  run.sh
.github/workflows/: ci.yml  main.yml
backend/: Dockerfile  config.py  main.py  plugins.py  pyproject.toml  session.py
backend/graph/: router.py  schemas.py
backend/node/: router.py  schemas.py
backend/routers/: graph.py  node.py  search.py  stats.py
backend/search/: router.py  schemas.py
frontend/: Dockerfile  Dockerfile.prod  nuxt.config.js  package-lock.json  package.json
frontend/assets/: utils.js
frontend/components/: AcercaDe.vue  BaseBubblePlot.vue  BaseButtonsShare.vue  BaseGraph.vue  CasesDescription.vue  CasesInvolved.vue  CasesResolutions.vue  EntityBiography.vue  EntityBiographyCasesEvolution.vue  EntityCasesTable.vue  EntityQuerella.vue  EntityStats.vue  HomeHot.vue  HomeHotCardCase.vue  HomeHotCardEntity.vue  HomeHotCardMagistrate.vue  MagistrateBiography.vue  MagistrateCases.vue  MagistrateCasesDuration.vue  MagistrateMostInvest.vue  PlotBar.vue  PlotBarStacked.vue  PlotBarVertical.vue  PlotDonut.vue  SatatsOral.vue  StatsCasesByYear.vue  StatsCrimes.vue  StatsDuration.vue  StatsJudges.vue  StatsOldCases.vue  (+4 more)
pipeline/: 01_download_external_data.py  02_data_normalization.py  03_download_resolution_pdfs.py  04_create_arango_nodes.py  05_create_arango_edges.py  06_update_arango.py  07_send_notify_emails.py  Dockerfile  config.py  pyproject.toml  utils.py
scraper/: Dockerfile  index.js  package-lock.json  package.json  run.sh
(+24 files in other folders)
