[tool.poetry]
name = "observatorio-corrupcion"
version = "0.8.0"
description = "Backend para el observatorio de corrupción"
authors = ["Franco N Bellomo <fnbellomo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "1.0.2"
Flask-RESTful = "0.3.6"
Flask-Cors = "3.0.6"
python-arango = "5.1.0"
numpy = "1.16.3"
gunicorn = "^20.1.0"
pydantic = "^1.8.2"
Flask-Caching = "^1.10.1"
redis = "^4.0.2"
flask-apispec = "^0.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
