[tool.poetry]
name = "cij-normalizer"
version = "0.1.0"
description = ""
authors = ["Franco N. Bellomo <fnbellomo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.3"
beautifulsoup4 = "^4.10.0"
python-Levenshtein = "^0.12.2"
pydantic = "^1.8.2"
httpx = "^0.19.0"
aiofiles = "^0.7.0"
tqdm = "^4.62.2"
Unidecode = "^1.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
